Feat : Interactive CSS - transition

--- a/1-CSS Transform/transition.html
+++ b/1-CSS Transform/transition.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Transform</title>
-    <link rel="stylesheet" href="styles/transform1.css" />
+    <link rel="stylesheet" href="styles/transition.css" />
   </head>
   <body>
     <h1>CSS Transform</h1>
