Feat : Interactive CSS - 3D Card Filp

--- a/2-CSS 3D/CSS_3D_filp.html
+++ b/2-CSS 3D/CSS_3D_filp.html
@@ -11,6 +11,10 @@
 				2️⃣ 2차 작업 : 뒷면 "입체"카드를 180도 뒤집어놓기
 				3️⃣ 3차 작업 : 3D 세상 ~~ Filp Card 컨테이너 ~~> 카드들까지, 3D 효과가 전달이 되도록 중간 card-side 박스에 "설정"하기
 				4️⃣ 4차 작업 : 뒤집어져, 뒷면이 보일때, "깜빡임 현상 => 기존 앞면이 보일려고 해서 일어나는" 을 막아야 함
+
+				🔎 [추가 - card filp 효과가 아닌, door 열기 효과]
+				- transform-origin(기본= 중앙) 을 => left 나 right 로 설정하면 된다.
+
 			 */
 
       .world {
@@ -51,6 +55,14 @@
 				- 부모인 A요소에 3D 세상에서, 내부 자식들이 3D 효과가 전달 되려면, 이 중간다리 요소에게 부모(A)에 3D 적용이 막히지 않게 설정해주는 것
 				 */
       }
+      .world:hover .card {
+        /* world 박스에 마우스 올리면 -> .card 박스들이 뒤집히는 transform 의미 */
+        transform: rotateY(-180deg);
+
+        /* 🔎 추가 - 문 열기 효과 */
+        /* transform-origin: 0% 0%; */
+      }
+
       .card-side {
         display: flex;
         justify-content: center;
@@ -77,11 +89,6 @@
       .card-side-back {
         background: red;
         /* 2️⃣ 작업 2 */
-        transform: rotateY(180deg);
-      }
-
-      .world:hover .card {
-        /* world 박스에 마우스 올리면 -> .card 박스들이 뒤집히는 transform 의미 */
         transform: rotateY(180deg);
       }
     </style>
