--- a/5-JS_Event/5-eventDelegation2.html
+++ b/5-JS_Event/5-eventDelegation2.html
@@ -13,6 +13,30 @@
         justify-content: center;
         align-items: center;
       }
+      @keyframes pointer-ani {
+        0% {
+          transfrom: scale(0);
+        }
+        50% {
+          transform: scale(1);
+        }
+        100% {
+          transform: scale(1.5);
+          opacity: 0;
+        }
+      }
+      .pointer {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 60px;
+        height: 60px;
+        margin: -30px 0 0 -30px;
+        border-radius: 50%;
+        background: url("../images/ilbuni2.png") no-repeat 0 0 / cover;
+        transform: scale(0);
+        animation: pointer-ani 0.5s linear;
+      }
       .menu {
         display: flex;
         width: 70vw;
@@ -46,6 +70,10 @@
         /* pointer-events: none; */
       }
     </style>
+    <script src="ilbuniPointer.js" defer></script>
+    <script>
+      window.addEventListener("DOMContentLoaded", () => new IlbuniPointer());
+    </script>
   </head>
   <body>
     <div class="menu">
