Feat : Interactive CSS - The 3 Door JS Interaction

--- a/6-ThreeDoorExample/index.html
+++ b/6-ThreeDoorExample/index.html
@@ -85,6 +85,19 @@
 			*/
       transition: 0.5s;
       transform-origin: 0%;
+
+      /* 
+			💡 [매우 중요]
+			- perspective 가 "원근감"이라고 했고, 이는 3d 효과를 위해 사용된다.
+			- 기본이 0px 인데, 이를 우리가 값을 넣어주고, 값에 따라 원근감이 생겨, 이후 3d 효과가 적용되는 것이다.
+			- 문제는 transition 에 설정한 전체 초 길이 안에 "원근감에 변화 도중에", 또 원근감 변화가 일어날려고해서 그렇다.
+			- 현 상황으로 보자면, "문이 열릴 때 원근감을 800px 로 설정했다."
+			- 즉 0(초기) -> 800px(마우스 올리면) -> 0px(마우스 떼면) 의 변화가 일반적인데
+			- 마우스를 떼면서, 800px -> 0px 로 줄어드는 "도중에", 또 마우스를 올려 transfrom 이 발생하면, 이때 "초기 원근감 값이 0이 아닌 그 시점에서의 perspective 값으로 설정된다."
+			- 결과적으로, 아주 작은 perspective 값은 유저와 아주 가까이 있는 듯한 3D 효과를 주므로, 문제현상이 발생하는 것
+			- 이를 해결하기 위해서는, "직접 3D효과가 일어나는 아이템과, 그들을 감싸는 부모요소에도 같은 perspective 같을 부여하면 해결된다."
+			*/
+      transform: perspective(800px);
     }
     .door:nth-child(1) .door-body {
       background: rgba(255, 0, 0, 0.7);
@@ -96,13 +109,13 @@
       background: rgba(0, 0, 255, 0.7);
     }
 
-    /* 문에 마우스 올렸을 때, 문이 열리는 효과 CSS 로 */
-    .door:hover .door-body {
+    /* 문에 마우스 올렸을 때(:hover), Click(JS) 문이 열리는 효과 CSS 로 */
+    .door-opend .door-body {
       /* 각 문마다 perspective 를 줘서, "동일한" 3d 느낌을 주기 위함 */
       transform: perspective(800px) rotateY(-110deg);
     }
     /* 문이 열리면서 일분이가 잠시 뒤에 나왔다, 잠시뒤에 들어가는 효과 CSS */
-    .door:hover .ilbuni {
+    .door-opend .ilbuni {
       /* 일분이 위치를 translate 하지 않았던 상태로 -> 그럼 숨어있다가 나온것 처럼 보이겠지 */
       transform: translate3d(0, 0, 0);
     }
@@ -130,4 +143,45 @@
       </div>
     </div>
   </body>
+  <script>
+    (function () {
+      const stageElem = document.querySelector(".stage");
+      /**
+       * 열려 있는 문이 있다면, 닫아주는 로직 2️⃣
+       * - 전역적으로 "활성화된 아이템을 담을" 변수를 사용
+       * - 초기에는 당연히 비어있다가, 활성화되면서 그 아이템 정보가 담기기겠지
+       * */
+      let opendDoorElem;
+
+      function doorHandler(e) {
+        /**
+         * 열려 있는 문이 있다면, 닫아주는 로직 1️⃣
+         * - 지역적으로 DOM Script로 가져오는 방법
+         * - 하지만, 성능 관점에서 DOM 에 접근하는 작업이 가장 성능이 안좋다.
+         * - 더구나, "특정 클래스"에 접근해서 아래 처럼 DOM 요소를 가져오는 방식은 그리 우하하지 않다.
+         * - 그리고, DOM 에 접근했다는 가정하에 작동하는 것인데, 만약 제대로 DOM을 가져오지 못해서 비어있게(null) 된다면 ? => 방지 로직이 필요(optional Operator 나 if 문 정도 ?)
+         * */
+        // let opendDoorElem = document.querySelector(".door-opend");
+
+        opendDoorElem?.classList.remove("door-opend");
+
+        let targetElem = e.target;
+        while (!targetElem.classList.contains("door")) {
+          targetElem = targetElem.parentNode;
+
+          if (targetElem.nodeName === "BODY") {
+            targetElem = null;
+            return;
+          }
+
+          if (targetElem.classList.contains("door")) {
+            targetElem.classList.toggle("door-opend");
+            opendDoorElem = targetElem;
+          }
+        }
+      }
+
+      stageElem.addEventListener("click", doorHandler);
+    })();
+  </script>
 </html>
