--- a/_appleClone/blank.html
+++ b/_appleClone/blank.html
@@ -23,7 +23,7 @@
       </nav>
       <nav class="local-nav">
         <div class="local-nav-links">
-          <a href="" class="product-name">AirMug Pro</a>
+          <a href="#" class="product-name">AirMug Pro</a>
           <a href="#">개요</a>
           <a href="#">제품사양</a>
           <a href="#">구입하기</a>
