--- a/_appleClone/blank.html
+++ b/_appleClone/blank.html
@@ -45,7 +45,7 @@
         </div>
       </section>
       <section class="scroll-section" id="scroll-section-1">
-        <p>
+        <p class="description">
           <strong>보통 스크롤 영역</strong>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptatum cum optio asperiores unde eos rerum voluptate dolorem
           tempora distinctio ratione, ducimus, laboriosam reiciendis necessitatibus animi quaerat eius quam. Quasi modi temporibus, enim id esse
@@ -95,7 +95,7 @@
           explicabo animi eos ratione obcaecati.
         </p>
       </section>
-      <footer class="footer">2021, AppleClone</footer>
+      <footer class="footer">2021 AppleClone</footer>
     </div>
   </body>
 </html>
