--- a/_appleClone/blank.html
+++ b/_appleClone/blank.html
@@ -97,5 +97,7 @@
       </section>
       <footer class="footer">2021 AppleClone</footer>
     </div>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
