--- a/_appleClone/blank.html
+++ b/_appleClone/blank.html
@@ -31,6 +31,9 @@
       </nav>
       <section class="scroll-section" id="scroll-section-0">
         <h1>AirMug Pro</h1>
+        <div class="sticky-elem sticky-elem-canvas">
+          <canvas id="video-canvas-0" width="1920" height="1080"></canvas>
+        </div>
         <div class="sticky-elem main-message a">
           <p>온전히 빠져들게 하는<br />최고급 세라믹</p>
         </div>
@@ -75,7 +78,7 @@
           </p>
           <div class="pin"></div>
         </div>
-        <div class="sticky-elem desc-message b">
+        <div class="sticky-elem desc-message c">
           <p>디자인 앤 퀄리티 오브 스웨덴,<br />메이드 인 차이나</p>
           <div class="pin"></div>
         </div>
