--- a/_appleClone/blank.html
+++ b/_appleClone/blank.html
@@ -11,7 +11,14 @@
     <link rel="stylesheet" href="css/default.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body>
+  <body class="before-load">
+    <!-- loading Box = 본 프로젝트 로드 되기전 로딩중... -->
+    <div class="loading">
+      <svg class="loading-circle">
+        <circle cx="50%" cy="50%" r="25"></circle>
+      </svg>
+    </div>
+    <!-- 본 프로젝트 내용 -->
     <div class="container">
       <nav class="global-nav">
         <div class="global-nav-links">
