Feat : last under Static underContent & Finished

--- a/_appleClone/blank.html
+++ b/_appleClone/blank.html
@@ -109,6 +109,27 @@
           explicabo animi eos ratione obcaecati.
         </p>
       </section>
+
+      <section class="normal-content">
+        <p class="mid-message">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dolorem similique cupiditate impedit repellendus ea, deserunt officiis
+          et tempora voluptate expedita ipsa recusandae error id cumque consequuntur. Placeat debitis eligendi impedit enim a omnis qui, veritatis est
+          earum nihil animi voluptas repellat ad dolorem nostrum voluptates sapiente fuga saepe similique temporibus dolor atque ab corrupti
+          repudiandae. Sapiente mollitia accusantium repellat, aliquam fuga accusamus maxime nemo vel iste aperiam blanditiis aliquid vitae et
+          recusandae quidem cumque ipsa, sed explicabo illo. Nam, officiis ullam? Ipsa, reiciendis ea inventore vitae accusamus minima adipisci
+          assumenda, necessitatibus repellat reprehenderit tempora, magni eum debitis minus quas.
+        </p>
+      </section>
+      <section class="normal-content">
+        <p class="mid-message">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium dolorem similique cupiditate impedit repellendus ea, deserunt officiis
+          et tempora voluptate expedita ipsa recusandae error id cumque consequuntur. Placeat debitis eligendi impedit enim a omnis qui, veritatis est
+          earum nihil animi voluptas repellat ad dolorem nostrum voluptates sapiente fuga saepe similique temporibus dolor atque ab corrupti
+          repudiandae. Sapiente mollitia accusantium repellat, aliquam fuga accusamus maxime nemo vel iste aperiam blanditiis aliquid vitae et
+          recusandae quidem cumque ipsa, sed explicabo illo. Nam, officiis ullam? Ipsa, reiciendis ea inventore vitae accusamus minima adipisci
+          assumenda, necessitatibus repellat reprehenderit tempora, magni eum debitis minus quas.
+        </p>
+      </section>
       <footer class="footer">2021 AppleClone</footer>
     </div>
 
